B-F Backup Sandbox 30.4.12/src/objects/Mandatory_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Infowelders</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mandatory Products</relationshipLabel>
        <relationshipName>Mandatory_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for the Product Remediation</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Mandatory Products</relationshipLabel>
        <relationshipName>Mandatory_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>Infowelders</description>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Mandatory Products</relationshipLabel>
        <relationshipName>Mandatory_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mandatory Product</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Mandatory Products Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandatory Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>